--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		</tr>
 		<tr>
 			<td colspan="2" rowspan="2">2. </td>
-			<td colspan="2" rowspan="2"><img ></td>
+			<td colspan="2" rowspan="2"><img src="c:/archivos/imagen2.jpg"></td>
 			<td>1GB RAM Module for computer</td>
 			<td>$ 50.00</td>
 		</tr>
