--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		</tr>
 		<tr>
 			<td colspan="2" rowspan="2">1. </td>
-			<td colspan="2" rowspan="2"><img src=""></td>
+			<td colspan="2" rowspan="2"><img src="imagen1.jpg"></td>
 			<td>IBM Clone Computer</td>
 			<td>$ 400.00</td>
 		</tr>
@@ -42,7 +42,7 @@
 		</tr>
 		<tr>
 			<td colspan="2" rowspan="2">2. </td>
-			<td colspan="2" rowspan="2"><img src=""></td>
+			<td colspan="2" rowspan="2"><img src="imagen2.jpg"></td>
 			<td>1GB RAM Module for computer</td>
 			<td>$ 50.00</td>
 		</tr>
